[gd_scene load_steps=5 format=2]

[ext_resource path="res://CPU/Disk.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Resources/Modeseven-L3n5.ttf"

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = SubResource( 4 )

[node name="Root" type="KinematicBody2D"]
input_pickable = true
collision_mask = 2147483650
script = ExtResource( 1 )

[node name="DiskPoints" type="Node2D" parent="."]

[node name="Point1" type="Area2D" parent="DiskPoints"]
position = Vector2( 96, 4 )
collision_layer = 2147483656
collision_mask = 2147483652

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiskPoints/Point1"]
shape = SubResource( 1 )

[node name="Point2" type="Area2D" parent="DiskPoints"]
position = Vector2( 4, 188 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiskPoints/Point2"]
shape = SubResource( 1 )

[node name="Point3" type="Area2D" parent="DiskPoints"]
position = Vector2( 188, 188 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiskPoints/Point3"]
shape = SubResource( 1 )

[node name="Appearance" type="Node2D" parent="."]

[node name="Backdrop" type="Polygon2D" parent="Appearance"]
polygon = PoolVector2Array( 0, 0, 0, 192, 192, 192, 192, 16, 176, 0, 152, 0, 152, 8, 144, 8, 144, 0, 40, 0, 40, 8, 16, 8, 16, 0 )

[node name="Outline" type="Line2D" parent="Appearance"]
points = PoolVector2Array( 0, 0, 0, 192, 192, 192, 192, 16, 176, 0, 152, 0, 152, 8, 144, 8, 144, 0, 40, 0, 40, 8, 16, 8, 16, 0, 0, 0, 0, 192 )
width = 4.0
default_color = Color( 0.164706, 0.164706, 0.145098, 1 )

[node name="TopSquare" type="Polygon2D" parent="Appearance"]
color = Color( 0.145098, 0.145098, 0.164706, 1 )
polygon = PoolVector2Array( 40, 0, 40, 48, 144, 48, 144, 0 )

[node name="Polygon2D" type="Polygon2D" parent="Appearance/TopSquare"]
position = Vector2( 0, -4 )
polygon = PoolVector2Array( 104, 8, 104, 48, 120, 48, 120, 8 )

[node name="TextboxOutline" type="Line2D" parent="Appearance"]
position = Vector2( 0, -8 )
points = PoolVector2Array( 16, 96, 16, 192, 176, 192, 176, 96, 16, 96, 16, 120 )
width = 4.0
default_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="SerialNumber" type="Label" parent="Appearance/TextboxOutline"]
margin_left = 24.0
margin_top = 160.0
margin_right = 160.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.145098, 0.145098, 0.164706, 1 )
text = "13002788"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLine" type="Line2D" parent="Appearance"]
points = PoolVector2Array( 0, 184, 192, 184 )
width = 4.0
default_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Shape" type="CollisionPolygon2D" parent="."]
position = Vector2( 96, 96 )
polygon = PoolVector2Array( -96, -96, -96, 96, 96, 96, 96, -80, 80, -96 )
[connection signal="mouse_entered" from="." to="." method="_on_Root_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Root_mouse_exited"]
